[gd_scene load_steps=3 format=3 uid="uid://c07r5uw5aqf05"]

[ext_resource type="Script" path="res://spriteset_resizer.gd" id="1_0hc4u"]
[ext_resource type="Texture2D" uid="uid://26uwlcugvglp" path="res://icon.svg" id="2_4ajj5"]

[node name="SpritesetResizer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0hc4u")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 44.0
grow_horizontal = 2

[node name="Button" type="Button" parent="Panel"]
layout_mode = 1
offset_left = 8.0
offset_top = 7.0
offset_right = 127.0
offset_bottom = 38.0
text = "Load Spriteset"

[node name="LoadedGridX" type="SpinBox" parent="Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 134.0
offset_top = 7.0
offset_right = 217.063
offset_bottom = 38.0
max_value = 512.0
step = 8.0
value = 32.0
rounded = true
suffix = "px"
select_all_on_focus = true

[node name="LoadedGridY" type="SpinBox" parent="Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 217.0
offset_top = 7.0
offset_right = 300.063
offset_bottom = 38.0
max_value = 512.0
step = 8.0
value = 32.0
rounded = true
suffix = "px"
select_all_on_focus = true

[node name="TargetGridX" type="SpinBox" parent="Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 428.0
offset_top = 7.0
offset_right = 511.063
offset_bottom = 38.0
max_value = 512.0
step = 8.0
value = 64.0
rounded = true
suffix = "px"
select_all_on_focus = true

[node name="TargetGridY" type="SpinBox" parent="Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 511.0
offset_top = 7.0
offset_right = 594.063
offset_bottom = 38.0
max_value = 512.0
step = 8.0
value = 64.0
rounded = true
suffix = "px"
select_all_on_focus = true

[node name="Button2" type="Button" parent="Panel"]
layout_mode = 1
offset_left = 598.0
offset_top = 7.0
offset_right = 717.0
offset_bottom = 38.0
text = "Resize"

[node name="Button3" type="Button" parent="Panel"]
layout_mode = 1
offset_left = 729.0
offset_top = 7.0
offset_right = 848.0
offset_bottom = 38.0
text = "Save Image"

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
size = Vector2i(392, 159)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png")
use_native_dialog = true

[node name="SaveDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
size = Vector2i(392, 159)
ok_button_text = "Save"
access = 2
filters = PackedStringArray("*.png")
use_native_dialog = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 44.0
offset_bottom = 22.0
grow_horizontal = 2
scale = Vector2(2, 2)
metadata/_edit_use_anchors_ = true

[node name="ImagePreview" type="TextureRect" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_4ajj5")

[node name="UpdateGridTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ErrorDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
title = "Error!"

[node name="SuccessDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
title = "Success"
dialog_text = "Image saved successfully"

[node name="BottomAnchor" type="CheckBox" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1003.0
offset_top = 9.0
offset_right = 1148.0
offset_bottom = 40.0
text = "Bottom anchor"

[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="Panel/LoadedGridX" to="." method="_on_loaded_grid_x_value_changed"]
[connection signal="value_changed" from="Panel/LoadedGridY" to="." method="_on_loaded_grid_y_value_changed"]
[connection signal="pressed" from="Panel/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Panel/Button3" to="." method="_on_button_3_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_save_dialog_file_selected"]
[connection signal="timeout" from="UpdateGridTimer" to="." method="_on_update_grid_timer_timeout"]
